Bug 137577 - Invalid option added to smb.conf
Summary: Invalid option added to smb.conf
Status: RESOLVED FIXED
Alias: None
Product: kcontrol
Classification: Unmaintained
Component: kcmsamba (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Schaefer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-19 16:03 UTC by
Modified: 2008-01-01 20:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Comments out msdfs proxy (492 bytes, patch)
2007-05-13 00:32 UTC, texstar
Details
The patch to fix the problem (4.44 KB, patch)
2007-07-04 10:54 UTC, Alexey Morozov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 2006-11-19 16:03:13 UTC
Version:           3.5.5 (using KDE 3.5.5, compiled sources)
Compiler:          Target: x86_64-mandriva-linux-gnu
OS:                Linux (x86_64) release 2.6.17-5mdv

i was looking to /etc/samba/smb.conf and then i runned kcontrol and entered "Internet & Network->File sharing", then clicked to edit a share point, checked the options and clicked OK, and with this action in the file smb.conf were addeded some entries, please see this diff that show what was added:

--- -   2006-11-18 23:02:36.636259000 +0000
+++ /etc/samba/smb.conf 2006-11-18 23:02:32.000000000 +0000
@@ -436,7 +436,9 @@
 comment = Home Directories
 
 [EXT3]
-path = /mnt/ext3
+path = /mnt/ext3/
 guest ok = yes
 read only = no
-
+case sensitive = no
+strict locking = no
+msdfs proxy = no


Then i entered smb4k and clicked to mount EXT3 in wich i got this error message:

"An error ocurred when trying to mount a share.

Details
4763: tree conect failed: ERRDOS _ ERRnosuchshare (You specified an invalid share)

SMB conection failed"


So i entered again smb.conf and just removed the last entries added after editing the share in kcontrol->Internet & Network->File sharing:

+case sensitive = no
+strict locking = no
+msdfs proxy = no

So i removed these entries and voila the mount point EXT3 was smoothly mounted, weird huh...
Comment 1 Thiago Macieira 2006-11-19 19:12:40 UTC
The line
   msdfs proxy = no
is invalid. The module should not add it.

smb.conf(5) says it's a value option, not a yes/no one.
Comment 2 2006-11-19 19:19:38 UTC
After checking again i saw that after removing only the line
msdfs proxy = no

from /etc/samba/smb.conf the share starts being correctly mounted, so is this line that is stopping a share from being mounted, and this line is added after running kcontrol and entering Internet & Network->File sharing, edit a share,then click the button "More Samba Options" and clicking the tab "security".

Anyway if the user just edit a share and doesnt make any change it should NEVER add any modification to smb.conf like is wrongly happening now.

So in resume when entering in kcontrol->"Internet & Network"->"File sharing"  and then editing a share and clicking in button "More Samba Options" and going through the severall tabs, it adds these 3 lines:

case sensitive = no
strict locking = no
msdfs proxy = no

in wich the line "msdfs proxy = no" is invalid, it causes that the share cant be mounted with the message:

"Details 
 4763: tree conect failed: ERRDOS _ ERRnosuchshare (You specified an invalid share) 
 SMB conection failed" 
Comment 3 texstar 2007-05-13 00:32:14 UTC
Created attachment 20556 [details]
Comments out msdfs proxy
Comment 4 texstar 2007-05-13 00:34:53 UTC
This patch fixes the msdfs proxy = no entry being added to the /etc/samba/smb.conf file for shares created through the kde control center.

Comment 5 Tommaso Colombo 2007-05-22 00:38:51 UTC
I can confirm this bug affects Debian lenny too.

Is somebody going to fix this? It is very annoying as it basically renders the kcontrol samba modules useless.

See also: https://bugs.launchpad.net/ubuntu/+source/samba/+bug/95452
Comment 6 Martin van Es 2007-05-24 10:46:35 UTC
This bug is pestering Feisty for a long time also:
https://bugs.launchpad.net/ubuntu/+source/samba/+bug/95460
Comment 7 Alexey Morozov 2007-07-04 10:54:27 UTC
Created attachment 21035 [details]
The patch to fix the problem

Basically, msdfs proxy is a string not a boolean. So I just changed the type of
corresponding configure option.
Comment 8 2007-07-04 17:50:34 UTC
Finaly passed almost a year since the bug report was created, it finallt gets fixed... just great...
Comment 9 2007-07-05 20:28:55 UTC
This patch isnt comited in branch_3.5
Comment 10 Jan Schaefer 2007-12-31 16:11:31 UTC
I am sorry, but the bug has been assigned to the wrong developer. Alexander is not responsible for this, but me. He should have assigned the bug to me, but he was very busy with other important things so he propably just overlooked this. Nevertheless I will now finally commit the patch.
Comment 11 Jan Schaefer 2008-01-01 20:57:28 UTC
SVN commit 755533 by schafer:

Fixed the widgets of the following samba options:
case sensitive, strict locking, msdfs proxy
The wrong widgets resulted in wrong default values, which in turn
resulted in wrongly generated settings in the smb.conf file.

BUG: 137577


 M  +643 -378  share.ui  
 M  +5 -3      sharedlgimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=755533