Fixed the widgets of the following samba options: case sensitive, strict locking, msdfs proxy The wrong widgets resulted in wrong default values, which in turn resulted in wrongly generated settings in the smb.conf file.

BUG: 137577

svn path=/branches/KDE/3.5/kdenetwork/filesharing/; revision=755533